--- a/style.css
+++ b/style.css
@@ -286,6 +286,7 @@ body.interests #preferences {
     color: rgba(255,38,12,1);
     text-align: center;
     cursor: pointer;
+    z-index: 1000;
     -webkit-transform: rotate( 0deg );
     -moz-transform: rotate( 0deg );
     -ms-transform: rotate( 0deg );
